Add metatag for link share

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+<html prefix="og: http://deepwto.org">
 
 <head>
+  <meta property="og:title" content="Deep WTO" />
+  <meta property="og:url" content="http://www.deepwto.org" />
+
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
