--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
 <head>
   <meta property="og:title" content="Deep WTO" />
   <meta property="og:url" content="http://www.deepwto.org" />
+  <meta property="og:image"
+    content="https://deepwto-web-api9a69179d4be7446a8d669a50296ce2deapi-dev.s3.amazonaws.com/preview.png" />
+
 
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
