Change meta tag title

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 <html prefix="og: http://deepwto.org">
 
 <head>
-  <meta property="og:title" content="Deep WTO" />
+  <meta property="og:title"
+    content="Deep WTO:DeepWTO: A Deep Learning Approach for Predicting Invokable Articles in WTO" />
   <meta property="og:url" content="http://www.deepwto.org" />
   <meta property="og:image"
     content="https://deepwto-web-api9a69179d4be7446a8d669a50296ce2deapi-dev.s3.amazonaws.com/preview.png" />
